# ODFfibConvert

./: CMakeLists.txt  Makefile  ODFReconstructor.cxx  ODFReconstructor.h  ODFSpharmComputer.cxx  ODFfibConvert.cpp  ODFfibConvert.cpp.in  ODFfibConvert.cxx  ODFfibConvert.xml  README.md  define.h.in  main.cpp
